--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= book.title %></td>
         <td><%= book.body %></td>
         <td><%= link_to 'Show', book, class: "show_#{book.id}" %></td>
-        <td><%= link_to 'Edit', edit_book_path(book.id), class: "edit_#{book.id}" %></td><!--(book.id)の追加-->
+        <td><%= link_to 'Edit', edit_book_path(book), class: "edit_#{book.id}" %></td><!--(book.id)の追加 idなし-->
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }, class: "destroy_#{book.id}" %></td>
       </tr>
     <% end %>
